@@ -13,6 +13,8 @@ Ipe 7.2.28
 
  * Store document language to enable appropriate spell checking
    (#451).
+
+ * Fix HiDPI handling on Qt6 (#470).
  
 ----------------------------------------------------------------------
 
